package com.progettoids_giuseppedemarco.domain;

public enum StatoVisione {
    DA_VEDERE,
    IN_VISIONE,
    VISTO
}
